Implement code changes to enhance functionality and improve performance

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "One watt solar server version 1",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "\u001b[D\u001b[D\u001b[D\u001b[C\u001b[C"
   },
   "author": "Christian Ejike Omeje",
@@ -14,6 +15,7 @@
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
     "forever": "^0.10.10",
+    "http-errors": "^2.0.0",
     "morgan": "^1.10.0",
     "net": "^1.0.2",
     "nodemailer": "^6.4.18",
